--- a/app/src/main/res/layout/fragment_photo_description.xml
+++ b/app/src/main/res/layout/fragment_photo_description.xml
@@ -173,6 +173,7 @@
 
         </FrameLayout>
         <android.support.v7.widget.CardView
+            android:id="@+id/artistPicCv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
