--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,6 @@
     <color name="pink">#E91E63</color>
     <color name="blue">#2196F3</color>
     <color name="teal">#009688</color>
+    <color name="indigo">#3F51B5</color>
 
 </resources>
